o.c.apputil: Renamed unit tests into *UnitTest, fixed FindBugs warnings